<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TableRow
        android:layout_weight="1">
        <EditText
            android:id="@+id/edit"
            android:text="@string/app_name"
            android:layout_weight="1"
            />
        <Button android:id="@+id/result"
            android:text="@string/result"
            android:textSize="25sp"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/plus"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="25sp"
            android:textColor="#FFC107"/>
        <Button
            android:id="@+id/minus"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="25sp"
            android:textColor="#FFC107"/>
        <Button
            android:id="@+id/Multiply"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="25sp"
            android:textColor="#FFC107"/>
        <Button
            android:id="@+id/division"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="25sp"
            android:textColor="#FFC107"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/num7"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num7"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num8"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num8"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num9"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num9"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/clear"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="25sp"
            android:textColor="#FFC107"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/num4"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num4"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num5"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num5"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num6"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num6"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/delete"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="25sp"
            android:textColor="#FFC107"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/num1"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num1"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num2"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num2"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num3"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num3"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/num0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/num0"
            android:textSize="25sp"/>
    </TableRow>
</TableLayout>